# songs

./: .gitignore  CLAUDE.md  ascii_to_latex.py  manifest.json  pyproject.toml  songs.py
packets/: aircoustic201909.tex  aircoustic201910.tex  aircoustic201912.tex  aircoustic202001.tex  aircoustic202002.tex  aircoustic202005.tex  aircoustic202006.tex  aircoustic202007.tex  aircoustic202009.tex  aircoustic202010.tex  aircoustic202011.tex  aircoustic202012.tex  aircoustic202101.tex  aircoustic202102.tex  aircoustic202103.tex  aircoustic202104.tex  aircoustic202105.tex  aircoustic202106.tex  aircoustic202107.tex  aircoustic202108.tex  aircoustic202109.tex  aircoustic202110.tex  aircoustic202111.tex  aircoustic202112.tex  aircoustic202201.tex  aircoustic202202.tex  aircoustic202203.tex  aircoustic202204.tex  aircoustic202205.tex  aircoustic202206.tex  aircoustic202207.tex  aircoustic202208.tex  aircoustic202209.tex  aircoustic202210.tex  aircoustic202211.tex  aircoustic202212.tex  aircoustic202301.tex  aircoustic202302.tex  aircoustic202303.tex  aircoustic202304.tex  (+28 more)
songs/ Fontella Bass/: Rescue Me.tex
songs/A Flock Of Seagulls/: I Ran.tex
songs/Adam Sandler/: The Chanukah Song, Pt. 4.tex  The Chanukah Song.tex
songs/Air Supply/: All Out of Love.tex
songs/Andrew Gold/: Thank You for Being a Friend.tex
songs/Barenaked Ladies/: Brian Wilson Body.tex  Brian Wilson Capo III.tex  Brian Wilson.tex
songs/Barrett Strong/: Money (That's What I Want).tex
songs/Barry Manilow/: Mandy Body.tex  Mandy Capo I.tex  (+1 more)
tex/: skrul-leadsheet-chords.cls  skrul-leadsheet.cls
(+578 files in other folders)
